# QCES_data_assimilation

./: .gitignore  pyproject.toml
data_assimilation/: __init__.py  circle_wave.py  observations.py  pendulum.py
data_assimilation/pendulum/: __init__.py  core.py  physics.py  visualise.py
data_assimilation/pendulum/single/: __init__.py  assimilation.py  physics.py  visualisation.py
data_assimilation/pendulum_old/: __init__.py  assimilation.py  physics.py  visualise.py
examples/: ex1.py  ex2.py  ex4.py
rough/: ex2.py  ex3.py  ex4.py  ex5.py  ex6.py
tests/: test_circle_wave.py  test_double_pendulum.py  test_single_pendulum.py
