[project]
name = "data-assimilation"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "scipy (>=1.16.1,<2.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "ipympl (>=0.9.7,<0.10.0)",
    "pyqt6 (>=6.9.1,<7.0.0)",
    "pyhamsys (>=0.70,<0.71)"
]

[tool.poetry.group.tests]
optional = true

[tool.poetry.group.tests.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.2.1"
snakeviz = "^2.2.2"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
